RESOLVED FIXED17019
Webkit does not build on linux powerpc
https://bugs.webkit.org/show_bug.cgi?id=17019
Summary Webkit does not build on linux powerpc
Rune B
Reported 2008-01-26 03:48:26 PST
Tested with two linux powerpc boxes (see DDR models http://en.wikipedia.org/wiki/Power_Mac_G4). one with Debian Lenny (Testing) and one with Ubuntu 7.04. Building Webkit (with --enable-video --enable-svg) on both fails with same error message. At another Debian Lenny box K7/AMD architecture Webkit builds with no error message (using same version of gcc etc). Error message: g++ -DHAVE_CONFIG_H -I. -I./JavaScriptCore -I./JavaScriptCore/ForwardingHeaders -I./JavaScriptCore/wtf -I./JavaScriptCore/kjs -I./DerivedSources -DBUILDING_GTK__=1 -DWTF_CHANGES -DXP_UNIX -DNDEBUG -DENABLE_ICONDATABASE=0 -I./JavaScriptCore/ForwardingHeaders -I./JavaScriptCore/bindings -I./JavaScriptCore/bindings/c -I./JavaScriptCore/pcre -I./JavaScriptCore/kjs -D_REENTRANT -I/usr/include -Wall -W -Wcast-align -Wchar-subscripts -Wreturn-type -Wformat -Wformat-security -Wno-format-y2k -Wundef -Wmissing-format-attribute -Wpointer-arith -Wwrite-strings -Wno-unused-parameter -fvisibility-inlines-hidden -fno-rtti -fno-exceptions -fvisibility=hidden -fstrict-aliasing -O2 -MT JavaScriptCore/kjs/libJavaScriptCore_la-AllInOneFile.lo -MD -MP -MF JavaScriptCore/kjs/.deps/libJavaScriptCore_la-AllInOneFile.Tpo -c JavaScriptCore/kjs/AllInOneFile.cpp -fPIC -DPIC -o JavaScriptCore/kjs/.libs/libJavaScriptCore_la-AllInOneFile.o /tmp/cczT9o46.s: Assembler messages: /tmp/cczT9o46.s:20238: Error: syntax error; found `,' but expected `(' /tmp/cczT9o46.s:20238: Error: junk at end of line: `,11' make[1]: *** [JavaScriptCore/kjs/libJavaScriptCore_la-AllInOneFile.lo] Error 1 make[1]: Leaving directory `/home/intermedia/apps/WebKit' make: *** [all] Error 2 intermedia@ubuntu-ppc:~/apps/WebKit $ Debian Lenny uname -a Linux powerdeb 2.6.22-3-powerpc-smp Ubuntu 7.04 uname -a Linux ubuntu-ppc 2.6.20-16-powerpc-smp #3 SMP Tue Dec 18 07:56:48 UTC 2007 ppc GNU/Linux a@ubuntu-ppc:~/apps/WebKit $ g++ --version g++ (GCC) 4.1.2 (Ubuntu 4.1.2-0ubuntu4) Copyright (C) 2006 Free Software Foundation, Inc. This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. Relevant assembly/disassembly code: http://paste.lisp.org/display/54743
Attachments
Alp Toker
Comment 1 2008-02-01 15:17:51 PST
Was anyone apart from Rune B able to confirm this issue?
David Kilzer (:ddkilzer)
Comment 2 2008-02-20 07:36:26 PST
Related to Bug 14521? Per Mark's annotation of <http://paste.lisp.org/display/54743>, it's the same section of code with the "=o" and "=m" workaround.
Patryk Zawadzki
Comment 3 2008-03-21 11:50:42 PDT
Bug #17449 has a working patch. Please apply and mark #17449 as dup.
David Kilzer (:ddkilzer)
Comment 4 2008-03-21 12:18:11 PDT
*** Bug 17449 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 5 2008-03-21 12:27:02 PDT
Note You need to log in before you can comment on or make changes to this bug.