2008-03-21  Arkadiusz Miskiewicz  <arekm@maven.pl>

Webkit does not build on linux powerpc

        <http://bugs.webkit.org/show_bug.cgi?id=17019>

        Reviewed by David Kilzer.

        * wtf/TCSpinLock.h:
        (TCMalloc_SpinLock::Unlock):


Canonical link: https://commits.webkit.org/24895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31216 268f45cc-cd09-0410-ab3c-d52691b4dbfc